--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -1,9 +1,9 @@
 <div class="log-form">
-    <h2>Login to your account</h2>
+    <h2>Введите имя и пароль</h2>
     <form method="post" action="/login">
-    <label for="name">User name</label>
+    <label for="name">имя</label>
     <input type="text" id="name" name="name"> <br />
-    <label for="password">Password</label>
+    <label for="password">пароль</label>
     <input type="password" id="password" name="password"> <br />
     <button type="submit">Login</button>
   </form>
