--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,7 +1,7 @@
 <div class="log-form">
     <h1>состояние выключателей</h1>
     <form method="post" action="/setdevicestatus">
-        <select name = "all_rele"><option>{{.Count_items}}</option></select>
+        <select style="display:none" name = "all_rele"><option>{{.Count_items}}</option></select>
     <table border="1">
 
         <caption>РЕЛЕ</caption>
